--- a/src/app/auth/register/s1-usertype/s1-usertype.page.html
+++ b/src/app/auth/register/s1-usertype/s1-usertype.page.html
@@ -1,14 +1,9 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>user-type</ion-title>
-  </ion-toolbar>
-</ion-header>
 
 
 <ion-content class="ion-content user-type-page">
     <div class="container">
       <div class="title">
-        <h1 class="ion-h1">Hey Chaima. Ready for your next big opportunity?</h1>
+        <h1 class="ion-h1">Hey!❤️ <br> Ready for your next big opportunity?</h1>
       </div>
 
       <section class="steps">
@@ -35,15 +30,16 @@
       </section>
 
       <div class="ion-mt"></div>
-      <h3 class="ion-h4-m note">It only takes 2-3 minutes and you can edit it later. We’ll save as you go.
+      <h3 class="ion-h4-m note">It only takes 2-3 minutes and you can edit it later.
       </h3>
-
-      <ion-button routerLink="/register/inf-register" type="submit" class="">
-        Get Started As Influencer
-      </ion-button>
-      <ion-button routerLink="/register/enp-register" type="submit" class="" >
-        Get Started As Enterpreneur
-      </ion-button>
+      <div class="btns">
+        <ion-button routerLink="/register/inf-register" type="submit" class="infBtn ion-h3-btn">
+          Get Started As Influencer
+        </ion-button>
+        <ion-button routerLink="/register/enp-register" type="submit" class="enpBtn ion-h3-btn" >
+          Get Started As Enterpreneur
+        </ion-button>
+      </div>
 
     </div>
 
