--- a/src/app/features/common/notifications/notifications.page.scss
+++ b/src/app/features/common/notifications/notifications.page.scss
@@ -44,11 +44,10 @@
 }
 .vu{
   background-color: var(--ion-color-cold);
-
+  margin-top: 5px;
   border-radius: 5px;
 }
 .notification-not-vu{
  color: var(--ion-color-secondary);
  margin-right: 8px;
-
 }
