--- a/src/app/features/enterpreneur/entp-profile/entp-profile.page.html
+++ b/src/app/features/enterpreneur/entp-profile/entp-profile.page.html
@@ -15,7 +15,7 @@
 
           <div class="profile">
             <div class="profiltPic-section">
-              <img class="profiltPic circle" [src]="enpData.image ??'../../../../assets/uerPhoto/entp.jpg'">
+              <img class="profiltPic circle" [src]="enpData.image ??'../../../../assets/avatar/profilePic.png'">
               <input (change)="uploadProfilePhoto($event.target.files)" name="image" id="profiltPic" style="display: none; " class="file-upload" type="file" accept="image/*">
               <label for="profiltPic" class="profile-label">
                 <div class="profile-edit">
