--- a/src/app/features/influencer/inf-profile/inf-profile.page.html
+++ b/src/app/features/influencer/inf-profile/inf-profile.page.html
@@ -26,7 +26,7 @@
               <div class="user-infi-section">
                 <h1 class="ion-h1 user-name">{{infData.fullName}}</h1>
                 <h2 class="ion-h2 user-sub">{{infData.subTitle}}</h2>
-                <ionic-rating-component readonly="true" activeColor = "#691DFE" fontSize = "17px" defaultColor = "#691DFE"></ionic-rating-component>
+                <ionic-rating-component  [rating]='roundAvgRating' readonly="true" activeColor = "#691DFE" fontSize = "17px" defaultColor = "#691DFE"></ionic-rating-component>
               </div>
           </div>
         <!--Contact buttons-->
@@ -79,7 +79,7 @@
           <div class="followers">
             <img class="icon-fb" src="../../../../assets/icon/Facebook.png">
             <div class="followers-nb">
-              <h1 class="ion-h1 h1-fol">3,232 M</h1>
+              <h1 class="ion-h1 h1-fol">4.6 K</h1>
               <h5 class="ion-h3-m user-sub">Followers</h5>
             </div>
           </div>
@@ -89,7 +89,7 @@
           <div class="followers">
             <img class="icon-insta" src="../../../../assets/icon/Instagram.png">
             <div class="followers-nb">
-              <h1 class="ion-h1 h1-fol">3,232 M</h1>
+              <h1 class="ion-h1 h1-fol">0.9 k</h1>
               <h5 class="ion-h3-m user-sub">Followers</h5>
             </div>
           </div>
@@ -99,7 +99,7 @@
           <div class="followers">
             <img class="icon-fb" src="../../../../assets/icon/YouTube.png">
             <div class="followers-nb">
-              <h1 class="ion-h1 h1-fol">3,232 M</h1>
+              <h1 class="ion-h1 h1-fol">0.5 k</h1>
               <h5 class="ion-h3-m user-sub">Followers</h5>
             </div>
           </div>
