--- a/src/app/auth/register/s1-usertype/s1-usertype.page.scss
+++ b/src/app/auth/register/s1-usertype/s1-usertype.page.scss
@@ -18,3 +18,31 @@
   margin-top: 50px;
   margin-bottom: 50px;
 }
+.btns{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  gap: 61px;
+}
+.infBtn{
+  --padding-top: 40px;
+  --padding-bottom: 40px;
+  width: 100%;
+  --box-shadow: none;
+  --background: var(--ion-color-cold);
+  color: var(--ion-color-secondary);
+  --border-style: solid;
+  --border-width: 1px;
+  --border-color: var(--ion-color-first);
+}
+.enpBtn{
+  --padding-top: 40px;
+  --padding-bottom: 40px;
+  width: 100%;
+  --box-shadow: none;
+  --background: var(--ion-color-secondary);
+  color: var(--ion-color-white);
+
+}
