--- a/src/app/features/common/chat/chat.page.scss
+++ b/src/app/features/common/chat/chat.page.scss
@@ -30,3 +30,31 @@
   float: right;
   font-size: small;
 }
+
+
+//header
+
+.profiltPic{
+  object-fit: cover;
+  object-position: center;
+  border-radius: 100%;
+  width: 40px;
+  height: 40px;
+}
+
+.user-profile{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  padding-right: 25px;
+  gap: 5px;
+}
+.user-name-h{
+  margin: 0px;
+}
+
+ion-tab-bar{
+  display: none;
+}
