--- a/src/app/features/common/messages/messages.page.html
+++ b/src/app/features/common/messages/messages.page.html
@@ -11,22 +11,11 @@
 
     <div class="ion-mt"></div>
     <!-- users messages section -->
-    <div class="message-section">
-      <div class="message-img-name">
-        <img class="profiltPic" src="../../../../assets/uerPhoto/portrait-pretty-lady-red-warm-jacket-stylish-eyeglasses.jpg" alt="user image">
-        <div class="message-info">
-          <h1 class="ion-h1 user-name">Friend name</h1>
-          <h3 class="ion-h3-b message ">Yeah sur I agree withe...</h3>
-        </div>
-      </div>
-      <div class="message-state">
-        <h3 class="ion-h3 message-not-vu"><i class="fi fi-ss-circle-small message-not-vu"></i></h3>
-        <h3 class="ion-h3 message-date">1 min</h3>
-      </div>
+    <div>
+      <app-message></app-message>
 
     </div>
-
-    <div class="message-section" *ngFor="let i of [1,2,3,4,5,6,7,8,9,10,11,12,13]">
+    <!-- <div class="message-section" *ngFor="let i of [1,2]">
       <div class="message-img-name">
         <img class="profiltPic" src="../../../../assets/uerPhoto/attractive-curly-woman-purple-cashmere-sweater-fuchsia-sunglasses-poses-isolated-wall.jpg" alt="user image">
         <div class="message-info">
@@ -38,7 +27,7 @@
         <h3 class="ion-h3 message-date">2:21 AM</h3>
       </div>
 
-    </div>
+    </div> -->
 
 
 
