--- a/src/app/features/common/payment/pay-with-card/pay-with-card.page.html
+++ b/src/app/features/common/payment/pay-with-card/pay-with-card.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button defaultHref="/tabs/payment"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
