--- a/src/app/features/enterpreneur/entp-profile/update-profile/update-profile.page.html
+++ b/src/app/features/enterpreneur/entp-profile/update-profile/update-profile.page.html
@@ -12,49 +12,70 @@
     <form #ngUpdateEnpForp="ngForm">
       <h1>Update Your Profile</h1>
 
-      <ion-label>Company</ion-label>
-      <ion-input [(ngModel)]="enp.fullName" name="fullName" class="ion-input ion-h2" type="text" placeholder="Your company name"></ion-input>
+      <h2 class="ion-h2 label">Full Name</h2>
+      <ion-input [(ngModel)]="enp.fullName" name="fullName" #fullName="ngModel" class="ion-input ion-h2" type="text" placeholder="Full Name" maxlength="30" required></ion-input>
+      <div *ngIf="fullName.touched && !fullName.valid" class="error-message">Full Name Number is required!</div>
 
-      <ion-label>Title</ion-label>
-      <ion-input [(ngModel)]="enp.subTitle" name="subTitle" class="ion-input ion-h2" type="text" placeholder="Exp: Enrepreneur"></ion-input>
+      <div class="ion-mt"></div>
 
-      <ion-label>About me</ion-label>
-      <ion-textarea [(ngModel)]="enp.bio" name="bio" class="ion-input ion-h2" type="textarea" placeholder="Tell the world about yourself."></ion-textarea>
+      <h2 class="ion-h2 label">Title</h2>
+      <ion-input [(ngModel)]="enp.subTitle" name="subTitle" #subTitle="ngModel" class="ion-input ion-h2" type="text" placeholder="Exp: Enrepreneur" maxlength="30"></ion-input>
 
-      <ion-label>Company</ion-label>
-      <ion-input [(ngModel)]="enp.companyName" name="companyName" class="ion-input ion-h2" type="text" placeholder="Your company name"></ion-input>
+      <div class="ion-mt"></div>
 
-      <h2 class="ion-h2 label">Specialties</h2>
-      <app-specialities (userSpecialities)="getUserSpecialities($event)"></app-specialities>
+      <h2 class="ion-h2 label">About me</h2>
+      <ion-textarea [(ngModel)]="enp.bio" name="bio" #bio="ngModel" class="ion-input ion-h2" type="textarea" placeholder="Tell the world about yourself."></ion-textarea>
 
-      <ion-label>Phone Number</ion-label>
-      <ion-input [(ngModel)]="enp.phoneNumber" name="phoneNumber" type="number" class="ion-input ion-h2" placeholder="Your phone namber"></ion-input>
+      <div class="ion-mt"></div>
 
-      <ion-label>Country</ion-label>
-      <ion-input [(ngModel)]="enp.country" name="country" type="text" class="ion-input ion-h2" placeholder="Your country name"></ion-input>
+      <h2 class="ion-h2 label">Company</h2>
+      <ion-input [(ngModel)]="enp.companyName" #companyName="ngModel" name="companyName" class="ion-input ion-h2" type="text" placeholder="Your company name" maxlength="10"></ion-input>
+      <div *ngIf="companyName.touched && !companyName.valid" class="error-message">Company Name is required!</div>
+
+      <div class="ion-mt"></div>
+
+      <h2 class="ion-h2 label">Phone Number</h2>
+
+      <ion-input [(ngModel)]="enp.phoneNumber" #phoneNumber="ngModel" name="phoneNumber" type="number" class="ion-input ion-h2" placeholder="Your phone namber"></ion-input>
+
+      <div class="ion-mt"></div>
+      <h2 class="ion-h2 label">Country</h2>
+      <h2 class="ion-h2 label"></h2>
+      <app-country [cucountry]="enp.country" [isMultiSelect]="false" [isRequired]="true" (countrySlected)="getCountry($event)"></app-country>
+
+      <div class="ion-mt"></div>
 
       <!-- Social links  -->
       <h2 class="ion-h2">Website Link</h2>
-      <ion-input [(ngModel)]="enp.website" name="website" type="link" class="ion-input ion-h2" placeholder="http://"></ion-input>
+      <ion-input [(ngModel)]="enp.website" name="website" #website="ngModel" type="link" class="ion-input ion-h2" placeholder="http://"></ion-input>
+
+      <div class="ion-mt"></div>
 
       <h2 class="ion-h2">Facebook Link</h2>
-      <ion-input [(ngModel)]="enp.facebook" name="facebook" type="link" class="ion-input ion-h2" placeholder="http://"></ion-input>
+      <ion-input [(ngModel)]="enp.facebook" name="facebook" #facebook="ngModel" type="link" class="ion-input ion-h2" placeholder="http://"></ion-input>
+
+      <div class="ion-mt"></div>
 
       <h2 class="ion-h2">Instagram Link</h2>
-      <ion-input [(ngModel)]="enp.instagram" name="instagram" type="link" class="ion-input ion-h2" placeholder="http://"></ion-input>
+      <ion-input [(ngModel)]="enp.instagram" name="instagram" #instagram="ngModel" type="link" class="ion-input ion-h2" placeholder="http://"></ion-input>
+
+      <div class="ion-mt"></div>
 
       <h2 class="ion-h2">LinkedIn Link</h2>
-      <ion-input [(ngModel)]="enp.linkedin" name="linkedin" type="link" class="ion-input ion-h2" placeholder="http://"></ion-input>
+      <ion-input [(ngModel)]="enp.linkedin" name="linkedin" #linkedin="ngModel" type="link" class="ion-input ion-h2" placeholder="http://"></ion-input>
+
+      <div class="ion-mt"></div>
 
       <h2 class="ion-h2">Youtube Link</h2>
-      <ion-input [(ngModel)]="enp.youtube" name="twitter" type="link" class="ion-input ion-h2" placeholder="http://"></ion-input>
+      <ion-input [(ngModel)]="enp.youtube" name="twitter" #twitter="ngModel" type="link" class="ion-input ion-h2" placeholder="http://"></ion-input>
 
+      <div class="ion-mt"></div>
 
       <ion-button type="submit" class="  ion-h3-btn btn-delete">Delete Profile</ion-button>
 
       <div class="btns-coll btns">
         <ion-button type="reset" class="  ion-h3-btn btn-cancel ion-btn-color"  >Cancel</ion-button>
-        <ion-button (click)="updateEnpProfile()" type="submit" class="  ion-h3-btn btn-update ion-btn-color"  >Update</ion-button>
+        <ion-button [disabled]="!ngUpdateEnpForp.valid" (click)="updateEnpProfile()" type="submit" class="  ion-h3-btn btn-update ion-btn-color"  >Update</ion-button>
       </div>
     </form>
   </div>
