--- a/src/app/features/enterpreneur/entps-profile/entps-profile.page.html
+++ b/src/app/features/enterpreneur/entps-profile/entps-profile.page.html
@@ -1,3 +1,6 @@
+<ion-header>
+  <app-header></app-header>
+</ion-header>
 <ion-content class="ion-content">
   <div class="container p-6">
     <!--Profile Phote + COVER PHOTE section-->
