--- a/src/app/features/enterpreneur/entps-profile/entps-profile.page.scss
+++ b/src/app/features/enterpreneur/entps-profile/entps-profile.page.scss
@@ -181,13 +181,21 @@ margin-right: 5px;
 
 //social media links
 .social-media{
+  --background: var(--ion-color-white);
   background-color: var(--ion-color-white);
   width: 100px;
   box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
   border-radius: 6px;
   margin: 10px;
+  height: 70px;
+
 }
 .social-media-h1{
   margin-left: 5%;
 }
 
+
+.social-cards{
+  --background: var(--ion-color-white);
+
+}
