--- a/src/app/features/influencer/infs-profile/infs-profile.page.html
+++ b/src/app/features/influencer/infs-profile/infs-profile.page.html
@@ -19,9 +19,9 @@
                 <h1 class="ion-h1 user-name">{{infData.fullName}}</h1>
                 <h2 class="ion-h2 user-sub">{{infData.subTitle}}</h2>
                 <!-- Rating -->
-                <h2 class="ion-h5-sm ratingT">5{{ratingsNb}} RATINGS</h2>
+                <h2 class="ion-h5-sm ratingT">{{ratingsNb}} RATINGS</h2>
                 <h2 class="ion-h2-b ratingT">{{avgRatung}}</h2>
-                <ionic-rating-component rating="2"  readonly="true" activeColor = "#691DFE" fontSize = "17px" defaultColor = "#691DFE"></ionic-rating-component>
+                <ionic-rating-component [rating]='roundAvgRating'  readonly="true" activeColor = "#691DFE" fontSize = "17px" defaultColor = "#691DFE"></ionic-rating-component>
                 <ion-button *ngIf="userType === 'entrepreneur'" (click)="ratingModal()" type="button" class="review" > + Add review</ion-button>
               </div>
           </div>
@@ -201,7 +201,7 @@
           <div class="mb" ></div>
 
           <div class="experiences">
-              <div *ngFor="let exp of experiences">
+              <div *ngFor="let exp of experiences" class="experience">
                 <div>
                     <img class="experienceIcon" src="../../../../assets/icon/experienceIcon.png" alt="">
                 </div>
