--- a/src/app/shared/components/inf-card/inf-card.component.html
+++ b/src/app/shared/components/inf-card/inf-card.component.html
@@ -1,7 +1,7 @@
 <img class="profiltPic" [src]="influencer.image ?? '../../../../assets/avatar/profilePic.png'" alt="">
 <h2 class="ion-h2-b">{{influencer.fullName}}</h2>
 <h3 class="ion-h3 followers-h">Instagram: 71K</h3>
-<ionic-rating-component readonly="true" activeColor = "#691DFE" fontSize = "12px" defaultColor = "#691DFE"></ionic-rating-component>
+<ionic-rating-component [rating]="roundAvgRating" readonly="true" activeColor = "#691DFE" fontSize = "12px" defaultColor = "#691DFE"></ionic-rating-component>
 <div (click)="goToInfProfile()" class="see-inf-profile">
   <a class="ion-h2 see-inf-h">View Profile</a>
   <i class="fi fi-rr-angle-small-right arrow-icon"></i>
